Optimized image width on project pages to avoid horizontal scrolling

--- a/styles/media.scss
+++ b/styles/media.scss
@@ -144,6 +144,7 @@
 
     .inner-page-img{
         margin-bottom: 20px;
+        max-width: 290px;
     }
 
     .inner-page-backlink{
